--- a/dazzle/Cargo.toml
+++ b/dazzle/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+http = "0.2.9"
+serde = "1.0"
+serde_derive = "1.0"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
